plugins {
	id 'java'
	id 'org.springframework.boot' version '3.1.5'
	id 'io.spring.dependency-management' version '1.1.3'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'->'21'
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'redis.clients:jedis:4.4.3'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis-reactive'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'io.projectreactor:reactor-test'
}

tasks.named('test') {
	useJUnitPlatform()
	// Disable tests based on the property
	if (!project.hasProperty('runTests') || project.property('runTests') == 'false') {
		enabled = false
	}
}

test {
	// Suppress harmless warning messages when unit testing (only affects tests)
	jvmArgs '-XX:+EnableDynamicAgentLoading'
	jvmArgs '-XX:+EnableDynamicAgentLoading', '-Xshare:off'
}